adjust to windows env

--- a/content/blog/2024_sum.md
+++ b/content/blog/2024_sum.md
@@ -9,7 +9,7 @@ description = ""
 ## 感情
 今年值得纪念的一点是结束了多年的单身生活。对于个人来讲，找对象的难度甚至比找一份新工作还要大，感性的事情总是带着更大的不确定性。寻找并维护一份稳定的亲密关系其实是人生中重要的一课，如果我们不想孑然一身的话，这堂课终究是要去学习的。
 
-相较于我的同龄人，我在感情这堂课中并不是一个优秀的学员。其中固然有坎坷与不幸运的地方，可是也有我自己的固执与天真。从某种意义上来讲，这堂课其实是在认识自己。因为它要求你去搞清楚自己在同龄人中的定位，或者说的功利一点，就是竞争力。然后基于自己的定位，你能匹配到的人又是怎样的。另外，它还要求你深刻地了解自己，在感情中你更看重什么，你更想要什么，你能放弃什么。因为对于我这么一个没有背景与凭借，自食其力的平凡人来讲，生活就是在学习权衡与取舍。如果对自己定位不清晰，还想贪婪地既要又要，那么很容易在精挑细选的生活中蹉跎了岁月。显然，我也曾是个贪婪、懵懂的二傻子，于是生活就带给了我捶打。好在我没有白白被揍，命运让我遇见了一位可爱的姑娘。
+相较于我的同龄人，我在感情这堂课中并不是一个优秀的学员。其中固然有坎坷与不幸运的地方，可是也有我自己的固执与天真。我一直都很恐惧被问“你的要求是什么”这种问题，如果缄口不言，又会被冠以“肯定是要求很高”的说法，搞得自己无从解释。在我看来，一个人无论高一点、矮一点或胖一点、瘦一点，都值得被爱。总的来说，我可能不会细化到每一个条件去匹配一个人，而是更多地通过两人之间相处的感觉来判断。用另一种方式来说，可能就是去碰，碰对了就找到了，碰不对就单着，尽管这种方式在一切讲究效率的大都市里不应该适用。我所做的努力可能只是增加自己的曝光度，尽可能地去多认识一些人，好在命运让我遇见了一位漂亮，可爱还很照顾我的姑娘。
 
 ## 工作上的思考
 这一年的工作，更多地带给我一种按部就班和承上启下的感觉，个人感觉没有太多的闪光点。很多时候，我所做的只是在现有复杂、成熟的系统上添砖加瓦，或许那种能从头开始做的、原创性强一点的工作本就凤毛麟角，可我的内心深处还是渴望有朝一日能做一些硬核的事情。
